--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -31,7 +31,7 @@ License URI: http://www.opensource.org/licenses/gpl-license.php
 */
 
 /* @group Global Reset */
- 
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -149,7 +149,8 @@ a.themeauthor {
 	text-decoration: none;
 	font-weight: bold;
 	letter-spacing: -2px;
-	text-shadow: 0px 1px 0px #FFF;
+	text-shadow: 1px 1px 0px #fff;
+	filter: dropshadow(color=#fff, offx=1, offy=1); 
 }
 
 #header #site-title a:hover {
@@ -1891,6 +1892,3 @@ pre {
 	border: 1px solid #800000;
 	margin: 0 0 15px 0;
 }
-
-
-	
