--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -31,7 +31,7 @@ License URI: http://www.opensource.org/licenses/gpl-license.php
 */
 
 /* @group Global Reset */
- 
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -81,6 +81,13 @@ body {
 
 /* @group Structural Customization */
 
+body{
+	background-attachment: scroll;
+	background-color: #808080;
+	background-image: url("images/white_carbon.png");
+	background-position: left top;
+	background-repeat: repeat;
+}
 
 #header {
 	clear: both;
@@ -306,6 +313,7 @@ a.themeauthor {
 	
 	h2.entry-title a {
 	font-weight: bold;
+	text-shadow: 0px 1px 0px #FFF;
 	}
 	
 	
@@ -489,6 +497,7 @@ table td {
 .widget-title {
 	font-weight: bold;
 	font-size: 1.5em;
+	text-shadow: 0px 1px 0px #FFF;
 }
 
 input#searchsubmit {
