--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -83,7 +83,7 @@ body {
 
 body{
 	background-attachment: scroll;
-	background-color: #808080;
+	background-color: #bfbfbf;
 	background-image: url("images/white_carbon.png");
 	background-position: left top;
 	background-repeat: repeat;
@@ -150,6 +150,7 @@ a.themeauthor {
 #header div#site-title a,
 #header h1#site-title,
 #header h1#site-title a {
+	filter: dropshadow(color=#fff, offx=1, offy=1);
 	margin: 0;
 	padding: 0;
 	line-height: 55px;
@@ -157,7 +158,6 @@ a.themeauthor {
 	font-weight: bold;
 	letter-spacing: -2px;
 	text-shadow: 1px 1px 0px #fff;
-	filter: dropshadow(color=#fff, offx=1, offy=1); 
 }
 
 #header #site-title a:hover {
@@ -170,7 +170,7 @@ a.themeauthor {
 	margin: 0;
 	padding: 0;
 	font-size: 24px;
-	line-height: 28px;
+	line-height: 18px;
 	color: #7d7d7d;
 	letter-spacing: -1px;
 }
