--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -639,6 +639,13 @@ li.menu-item a:hover {
 
 /* @group WP Blog Styles */
 
+#nav-above {
+	padding-bottom: 10px;
+}
+#nav-below {
+	padding-top: 10px;
+}
+
 .entry-meta {
 	font-size: 11px;
 	color: #666;
@@ -651,9 +658,9 @@ li.menu-item a:hover {
 }
 
 .post {
-	margin-bottom: 20px;
-	padding-bottom: 10px;
-	border-bottom: 1px solid #d6d6d6;
+	border-bottom: 1px solid #fff;
+	border-top: 1px solid #999;
+	padding: 10px 0 20px;
 }
 .post.single {
 	border-bottom: none;
