tighted up styles for header text, added styles for sidebar

--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -59,8 +59,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	pre,code {
 		white-space: normal;
 		background-color: #ededed;
-		border-bottom: 1px solid #d9d9d9;
-		border-top: 1px solid #d9d9d9;
+		/* border-bottom: 1px solid #d9d9d9;
+		border-top: 1px solid #d9d9d9; */
 		display: block;
 		width: 100%;
 		font: 12px/24px Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace;
@@ -83,7 +83,6 @@ body {
 
 body{
 	background-attachment: scroll;
-	background-color: #bfbfbf;
 	background-image: url("images/white_carbon.png");
 	background-position: left top;
 	background-repeat: repeat;
@@ -155,7 +154,7 @@ a.themeauthor {
 	filter: dropshadow(color=#fff, offx=1, offy=1);
 	margin: 0;
 	padding: 0;
-	line-height: 55px;
+	line-height: 35px;
 	text-decoration: none;
 	font-weight: bold;
 	letter-spacing: -2px;
@@ -176,10 +175,12 @@ a.themeauthor {
 #header span.site-desc {
 	margin: 0;
 	padding: 0;
-	font-size: 24px;
-	line-height: 14px;
-	color: #7d7d7d;
+	font-size: 18px;
+	line-height: 24px;
+	color: #666;
 	letter-spacing: -1px;
+	text-shadow: 0 0 2px #999999;
+	text-transform: uppercase;
 }
 
 /* Image Header */
@@ -664,6 +665,7 @@ li.menu-item a:hover {
 }
 .post.single {
 	border-bottom: none;
+	border-top: none;
 }
 
 a.more-link {
@@ -1891,9 +1893,6 @@ img.scale-with-grid {
 
 /* @end */
 
-
-
-
 /* added by Bill C */
 pre {
 	background-color: transparent;
@@ -1914,4 +1913,22 @@ pre {
 	padding: 3px 5px;
 	border: 1px solid #800000;
 	margin: 0 0 15px 0;
+}
+
+/* Added by Adan A */
+#sidebar {
+}
+#sidebar ul {
+	background-color: #efefef;
+	padding-bottom: 1px;
+	padding-top: 10px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;
+	-moz-border-radius-topright: 5px;
+	-moz-border-radius-bottomright: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+#sidebar ul li ul {
+	padding-top: 0;
 }
