--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -159,10 +159,10 @@ a.themeauthor {
 	font-weight: bold;
 	letter-spacing: -2px;
 	text-shadow: 1px 1px 0px #fff;	
-	-webkit-transition: -webkit-transform 0.2s ease-out;
-	-moz-transition: -moz-transform 0.2s ease-out;
-	-o-transition: -o-transform 0.2s ease-out;
-	transition: transform 0.2s ease-out;
+	-webkit-transition: -webkit-transform 0.2s ease-out 200ms;
+	-moz-transition: -moz-transform 0.2s ease-out 200ms;
+	-o-transition: -o-transform 0.2s ease-out 200ms;
+	transition: transform 0.2s ease-out 200ms;
 }
 
 #header #site-title a:hover {
@@ -1920,6 +1920,10 @@ pre {
 }
 
 /* Added by Adan A */
+.entry-content ul {
+	list-style: disc;
+	margin-left: 20px;
+}
 #sidebar {
 }
 #sidebar ul {
