--- a/wp-content/themes/skeleton/style.css
+++ b/wp-content/themes/skeleton/style.css
@@ -159,18 +159,18 @@ a.themeauthor {
 	font-weight: bold;
 	letter-spacing: -2px;
 	text-shadow: 1px 1px 0px #fff;	
-	-webkit-transition: -webkit-transform 0.2s ease-out 200ms;
+	/* -webkit-transition: -webkit-transform 0.2s ease-out 200ms;
 	-moz-transition: -moz-transform 0.2s ease-out 200ms;
-	-o-transition: -o-transform 0.2s ease-out 200ms;
+	-o-transition: -o-transform 0.2s ease-out 200ms; */
 	transition: transform 0.2s ease-out 200ms;
 }
 
 #header #site-title a:hover {
 	color: #3253ad;
-	-webkit-transform:rotate(-2deg) translateX(40px) scale(1.2);
+	/* -webkit-transform:rotate(-2deg) translateX(40px) scale(1.2);
 	-moz-transform:rotate(-2deg) translateX(40px) scale(1.2);
 	-ms-transform:rotate(-2deg) translateX(40px) scale(1.2);
-	-o-transform:rotate(-2deg) translateX(40px) scale(1.2);
+	-o-transform:rotate(-2deg) translateX(40px) scale(1.2); */
 	transform:rotate(-2deg) translateX(40px) scale(1.2);
 }	
 
@@ -208,16 +208,16 @@ a.themeauthor {
  	background: -moz-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
  	background: -webkit-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#FCFCFC, #ECECEC);
-    border-color: #EAEAEA #F5F5F5 #F5F5F5 #F5F5F5;
-    -moz-border-radius: 5px 5px 5px 5px;
-    -webkit-border-radius: 5px 5px 5px 5px;
-     border-radius: 5px 5px 5px 5px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    -pie-box-shadow: 0 1px 1px #ccc;
-    position: relative;
-    behavior: url("./wp-content/themes/skeleton/PIE.php");
+	border-color: #EAEAEA #F5F5F5 #F5F5F5 #F5F5F5;
+  /* -moz-border-radius: 5px 5px 5px 5px;
+  -webkit-border-radius: 5px 5px 5px 5px; */
+  border-radius: 5px 5px 5px 5px;
+	border-style: solid;
+	border-width: 1px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  -pie-box-shadow: 0 1px 1px #ccc;
+  position: relative;
+  behavior: url("./wp-content/themes/skeleton/PIE.php");
 }
 	
 
@@ -227,8 +227,8 @@ a.themeauthor {
 	-pie-background: linear-gradient(#FCFCFC, #ECECEC);
 	background-image: none;
 	border-right: 1px solid #e3e3e3;
-    position: relative;
-    behavior: url("./wp-content/themes/skeleton/PIE.php");
+  position: relative;
+  behavior: url("./wp-content/themes/skeleton/PIE.php");
 }
 
 #navigation ul li a {
@@ -250,8 +250,8 @@ a.themeauthor {
  	background: -webkit-linear-gradient(270deg, #FFFFFF, #F1F1F1) repeat scroll 0 0 transparent;
 	-pie-background: linear-gradient(#FFFFFF, #F1F1F1);
 	border-bottom: 1px solid #F1F1F1;
-    position: relative;
-    behavior: url("./wp-content/themes/skeleton/PIE.php");
+  position: relative;
+  behavior: url("./wp-content/themes/skeleton/PIE.php");
 }
 
 #navigation ul li:hover li a {
@@ -274,13 +274,13 @@ a.themeauthor {
 #navigation ul.sub-menu {
  	background: -moz-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
  	background: -webkit-linear-gradient(270deg, #FCFCFC, #ECECEC) repeat scroll 0 0 transparent;
-    border-color: #EAEAEA #F5F5F5 #F5F5F5 #F5F5F5;
-    -moz-border-radius: 5px 5px 5px 5px;
-    -webkit-border-radius: 5px 5px 5px 5px;
-     border-radius: 5px 5px 5px 5px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	border-color: #EAEAEA #F5F5F5 #F5F5F5 #F5F5F5;
+	/* -moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px; */
+	border-radius: 5px 5px 5px 5px;
+	border-style: solid;
+	border-width: 1px;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 #navigation ul.sub-menu li {
@@ -422,8 +422,8 @@ a.themeauthor {
 	background-color: #f6f6f6;
 	color: #666;
 	text-shadow: 1px 1px 0px #fff;
-	-webkit-box-shadow:1px 1px 6px #ddd;
-	-moz-box-shadow:1px 1px 6px #ddd;
+	/* -webkit-box-shadow:1px 1px 6px #ddd;
+	-moz-box-shadow:1px 1px 6px #ddd; */
 	box-shadow:1px 1px 6px #ddd;
 	position: relative;
 	behavior: url('../wp-content/themes/presstige/css/PIE.php');
@@ -715,8 +715,8 @@ a.more-link {
 	  border-top: 1px solid #ccc;
 	  border-left: 1px solid #ccc;
 	  padding: 4px 12px;
-	  -moz-border-radius: 3px;
-	  -webkit-border-radius: 3px;
+	  /* -moz-border-radius: 3px;
+	  -webkit-border-radius: 3px; */
 	  border-radius: 3px;
 	  color: #444;
 	  display: inline-block;
@@ -835,15 +835,15 @@ a.button.white {
   background-image: linear-gradient(#ffffff, #e3e3e3);
   -pie-background: linear-gradient(#ffffff, #e3e3e3);
   border: 1px solid #dbdbdb;
-  -moz-border-radius: 6px;
+  /* -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   -o-border-radius: 6px;
   -ms-border-radius: 6px;
-  -khtml-border-radius: 6px;
+  -khtml-border-radius: 6px; */
   border-radius: 6px;
-  -moz-box-shadow: inset 0 1px 0 0 white;
+  /* -moz-box-shadow: inset 0 1px 0 0 white;
   -webkit-box-shadow: inset 0 1px 0 0 white;
-  -o-box-shadow: inset 0 1px 0 0 white;
+  -o-box-shadow: inset 0 1px 0 0 white; */
   box-shadow: inset 0 1px 0 0 white;
   color: #333333;
   text-shadow: 0 1px 0 white;
@@ -856,9 +856,9 @@ a.button.white:hover {
   background-image: -moz-linear-gradient(#dbdbdb, #f2f2f2);
   background-image: -o-linear-gradient(#dbdbdb, #f2f2f2);
   -pie-background: linear-gradient(#dbdbdb, #f2f2f2);
-  -moz-box-shadow: inset 0 1px 0 0 white;
+  /* -moz-box-shadow: inset 0 1px 0 0 white;
   -webkit-box-shadow: inset 0 1px 0 0 white;
-  -o-box-shadow: inset 0 1px 0 0 white;
+  -o-box-shadow: inset 0 1px 0 0 white; */
   box-shadow: inset 0 1px 0 0 white;
   cursor: pointer;
 }
